# twsmatrix

./: CMakeLists.txt  Makefile  Readme.md  twsmatrix.natvis
include/: matrix.hpp  matrix_operations.hpp  twsmatrix.hpp  vector.hpp  vector_operations.hpp
test/: test_matrix.cpp  test_matrix_operations.cpp  test_vector.cpp  test_vector_operations.cpp
